# DataGen

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
service/: api.py  main.py
service/data/: Product_reviews.db  data.csv
